# interstellar

./: CMakeLists.txt  readme.md  readme.txt
docs/: Interstellar Car Park 3D v3.docx
include/glm/: glm.h  mat.inl  vec.inl
include/models/: figures.h  model.h  ms3d.h  rocket.h
include/objects/: camera.h  car.h  object.h  outline.h  spaceship.h  tile.h  ufo.h
include/system/: engine.h  grid.h  window.h
include/utils/: spline.h
src/: CMakeLists.txt  main.cpp
src/models/: figures.cpp  model.cpp  ms3d.cpp  rocket.cpp
src/objects/: camera.cpp  car.cpp  object.cpp  outline.cpp  spaceship.cpp  tile.cpp  ufo.cpp
src/system/: engine.cpp  grid.cpp  window.cpp
src/utils/: spline.cpp
